[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasail-lite"
version = "1.0.4"
description = "DataSAIL is a tool to split datasets while reducing information leakage."
readme = "README.md"
license = { file = "LICENSE" }
authors = ["Roman Joeres <roman.joeres@helmholtz-hips.de"]
maintainers = ["Roman Joeres <roman.joeres@helmholtz-hips.de"]
homepage = "https://datasail.readthedocs.io/en/latest/"
keywords = ["data", "splitting", "dataset", "leakage", "ML"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://datasail.readthedocs.io/en/latest/"
"Code" = "https://github.com/kalininalab/DataSAIL"

[project.dependencies]
python = ">=3.8"
numpy = "*"
pandas = "*"
networkx = "*"
matplotlib = "*"
pytest = "*"
setuptools = "*"
pyscipopt = "*"
scikit-learn = "*"
cvxpy = "*"
pytest-cov = "*"
rdkit = "*"
pytest-cases = "*"
pyyaml = "*"
cvxopt = "*"
h5py = "*"

[project.optional-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-cases = "^2.0.0"
notebook = "^6.4.12"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "==0.8.9"
nbsphinx-link = "==1.3.0"

[project.entry-points]
datasail = "datasail.sail:sail"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
