[tool.poetry]
name = "datasail"
version = "1.4.0"
repository = "https://github.com/kalininalab/DataSAIL"
readme = "README.md"
description = "A package to compute hard out-of-distribution data splits for machine learning, challenging generalization of models."
authors = ["Roman Joeres <roman.joeres@helmholtz-hips.de>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.14.0"
numpy = "*"
pandas = "*"
networkx = "*"
matplotlib = "*"
pyscipopt = "*"
scikit-learn = "*"
cvxpy = "*"
rdkit = "*"
pyyaml = "*"
cvxopt = "*"
h5py = "*"
pyarrow = "*"
tqdm = "*"
grakel = "*"
importlib_resources = "*"

[tool.poetry.dev-dependencies]
setuptools = "*"
pytest = "<9.1.0"
pytest-cov = "*"
notebook = "^6.4.12"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "==0.8.9"
nbsphinx-link = "==1.3.0"
myst-parser = "*"

[tool.poetry.scripts]
glyles = "datasail.sail:sail"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
